# new--NLP

./: .dockerignore  .gitignore  README.md  config.py  pipeline.py  test.py
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/workflows/: ci.yml
go_module/: README_nlp_rust.md  go.mod  main.go  model_blob.rs  nlp.rs  opt_module.go  parallel_validator.go  parallel_validator_highperf.go  rust_client.go  rust_client_stub.go
h_module/: h_config.yaml  semantic_algebra.hi  semantic_algebra.hs
hpp_module/: Makefile  QUICK_REFERENCE.md  README.md  VISUALIZER_README.md  hpp_config.json  recursive_ontology  recursive_ontology.cpp  recursive_ontology.hpp  requirements.txt  visualizer.py
hpp_module/test_env/: pyvenv.cfg
js_module/: main.js  observer_model.js  observer_model_highperf.js  package.json  run_node_tests.js
js_module/tests/: observer_model.test.js  observer_model_highperf.test.js
modules/entity_recognition/: ner  ner.cpp
modules/graph_engine/: main.go
modules/ontology_reasoner/: reasoner.py
modules/semantic_processor/: processor.py
modules/tokenizer/: tokenizer  tokenizer.cpp
product/: Dockerfile  README.md
product/app/: main.py
python_module/: __init__.py  cli.py  rust_wrapper.py
python_module/tests/: test_model_blob_read.py  test_rust_wrapper.py  (+1 more)
python_nlp/: pyproject.toml  setup.py
rust_module/: Cargo.toml  Makefile  README.md  build.sh  c_stub.c
tests/: test_assets_logo.py  test_nlp_integration.py  test_python_analyze.py  test_python_cli.py  test_python_compute.py  test_python_tokenize.py  test_rustlib_presence.py
(+10 files in other folders)
