[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-nlp-core"
version = "0.1.0"
description = "Core NLP utilities for Python."
authors = [
  { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/1proprogrammerchant/new--NLP"
